--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,10 @@
-* {
+div {
     box-sizing: border-box;
 }
 
 body {
     margin: 0;
+    padding: 0;
 }
 
 #game-container {
@@ -26,10 +27,44 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    border: 1px solid black;
     position: relative;
-    z-index:10;
+    background-color: white;
 }
+
+.indicator-wrapper:nth-of-type(5) {
+    position: absolute;
+    width:100%;
+    height:100%;
+    background-color: red;
+}
+
+.indicator-wrapper:nth-of-type(6) {
+    position: absolute;
+    width:100%;
+    height:100%;
+    background-color: green;
+}
+
+.indicator-wrapper {
+    z-index: -1;
+}
+
+.handle {
+    position: absolute;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    border-radius: 1000rem;
+}
+
+.indicator-wrapper:nth-of-type(5) > .handle {
+    left:20%;
+}
+
+.indicator-wrapper:nth-of-type(6) > .handle {
+    left: -20%;
+}
+
 
 
 .indicator {
@@ -38,22 +73,44 @@ body {
     font-family: sans-serif;
     font-size: 20px;
     width: 100%;
-    position: absolute;
     height:100%;
+    background-color: rgb(165, 165, 165);
+    position: absolute;
+}
+/*
+.indicator:nth-of-type(5){
+    color: red;
+    left:80%;
+    z-index: -5;
 }
 
-.indicator:nth-of-type(5){
-    border: 1px solid red;
-    left:100%;
-    background-color: hsla(0, 100%, 50%, 0.336);
-    color: red;
+.indicator:nth-of-type(5) > .handle{
+    content:"";
+    background-color: black;
+    width:100%;
+    height: 100%;
+    left: 20%;
+    border-radius: 1000rem;
+    position: absolute;
+    z-index:-100;
+}
+
+.indicator:nth-of-type(6)::after {
+    content:"";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: -20%;
+    border-radius: 1000rem;
+    background-color: yellow;
+    z-index:-1000;
 }
 
 .indicator:nth-of-type(6){
     border: 1px solid blue;
-    left: -100%;
     color: blue;
-}
+    left:-100%;
+} */
 
 .number {
     width:25%;
@@ -61,14 +118,6 @@ body {
     display:flex;
     align-items: center;
     justify-content: center;
-}
-
-.indicator:nth-of-type(6){
-    width: 100%;
-    position: absolute;
-    height:100%;
-    border: 1px solid blue;
-    left: -100%;
 }
 
 .color-slot {
