--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,22 @@
+:root {
+    --main-black:rgb(61, 61, 61);
+    --secondary-black:rgb(36, 36, 36);
+    --correct-bg:whitesmoke;
+    --correct-text:rgb(0, 119, 255);
+    --correct-pos-bg:rgb(223, 116, 116);;
+    --correct-pos-text:rgb(175, 0, 0);
+    --color-1:red;
+    --color-2:blue;
+    --color-3:green;
+    --color-4:yellow;
+    --color-5:white;
+    --color-6:pink;
+    --color-7:orange;
+    --color-8:gray;
+    --color-select-dim:40px;
+}
+
+
 div {
     box-sizing: border-box;
 }
@@ -5,20 +24,46 @@ div {
 body {
     margin: 0;
     padding: 0;
+    position: relative;
+    z-index: 0;
+    background-color: var(--secondary-black);
 }
 
 #game-container {
+    display: grid;
+    height:100vh;
+    position: relative;
+    z-index: -1000;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 100%;
+    grid-template-areas: 'game selection';
+}
+
+#selection {
+    grid-area: selection;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#game-area {
+    grid-area: game;
+    position: relative;
+    z-index: -1000;
     display: flex;
     justify-content: center;
-    height:100vh;
 }
 
 #board {
+    height:100%;
+    width: 300px;
+    background-color: var(--main-black);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    border: 1px green solid;
+    box-shadow: 2px 0px 3px black, -2px 0px 3px black;
 }
 
 .board-row {
@@ -28,7 +73,6 @@ body {
     align-items: center;
     width: 100%;
     position: relative;
-    background-color: white;
 }
 
 .indicator-wrapper:nth-of-type(5) {
@@ -36,13 +80,14 @@ body {
     width:100%;
     height:100%;
     background-color: red;
+    left:80%;
 }
 
 .indicator-wrapper:nth-of-type(6) {
     position: absolute;
     width:100%;
     height:100%;
-    background-color: green;
+    left: -80%;
 }
 
 .indicator-wrapper {
@@ -51,20 +96,36 @@ body {
 
 .handle {
     position: absolute;
-    background-color: black;
+    background-color: var(--main-black);
     width: 100%;
     height: 100%;
     border-radius: 1000rem;
+}
+
+.indicator-wrapper:nth-of-type(5) > .indicator {
+    background-color: var(--correct-pos-bg);
+}
+
+.indicator-wrapper:nth-of-type(6) > .indicator {
+    background-color:var(--correct-bg);
+    border: 1px solid var(--main-black);
 }
 
 .indicator-wrapper:nth-of-type(5) > .handle {
     left:20%;
 }
 
+.indicator-wrapper > .handle:active {
+    background-color: rgba(168, 218, 220, 1.00);
+}   
+
+.indicator-wrapper > .handle:hover {
+    cursor: pointer;
+}
+
 .indicator-wrapper:nth-of-type(6) > .handle {
     left: -20%;
 }
-
 
 
 .indicator {
@@ -74,43 +135,8 @@ body {
     font-size: 20px;
     width: 100%;
     height:100%;
-    background-color: rgb(165, 165, 165);
     position: absolute;
 }
-/*
-.indicator:nth-of-type(5){
-    color: red;
-    left:80%;
-    z-index: -5;
-}
-
-.indicator:nth-of-type(5) > .handle{
-    content:"";
-    background-color: black;
-    width:100%;
-    height: 100%;
-    left: 20%;
-    border-radius: 1000rem;
-    position: absolute;
-    z-index:-100;
-}
-
-.indicator:nth-of-type(6)::after {
-    content:"";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: -20%;
-    border-radius: 1000rem;
-    background-color: yellow;
-    z-index:-1000;
-}
-
-.indicator:nth-of-type(6){
-    border: 1px solid blue;
-    color: blue;
-    left:-100%;
-} */
 
 .number {
     width:25%;
@@ -122,7 +148,13 @@ body {
 
 .color-slot {
     border-radius: 50%;
-    height:50px;
-    width: 50px;
+    height:var(--color-select-dim);
+    width: var(--color-select-dim);
+    margin: 0px 10px;
     box-shadow: inset 0 0 10px #000000;
+}
+
+.selection-row {
+    display: flex;
+    justify-content: space-between;
 }
